@startuml US15_CD
skinparam classAttributeIconSize 0
hide circle
hide methods

class "DGS Administrator" {
}

class Company {
}

class EmployeeStore {
    + getEmployeesByRole(roleClass)
}

class Employee {
    - name
    - postal_address
    - phone_number
    - email
}

class Nurse {
}

class Receptionist {
}

class ListEmployeeByRoleView {
}

class ListEmployeeByRoleController {
    + getRoles()
    + getEmployeesByRole(role)
}

ListEmployeeByRoleView ..> ListEmployeeByRoleController : uses
ListEmployeeByRoleController ..> Company : uses
ListEmployeeByRoleController ..> EmployeeStore : uses

Company "1" -down- "1" EmployeeStore : uses >
EmployeeStore "1" -right- "0..*" Employee : stores >

Nurse --|> Employee
Receptionist --|> Employee

@enduml